# ur5

./: .gitignore  CMakeLists.txt  README.md  package.xml
Doxygen/: Doxyfile
Doxygen/html/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8zh-_c_n_8md.html  activations_8py.html  activations_8py_source.html  annotated.html  augmentations_8py.html  augmentations_8py_source.html  autoanchor_8py.html  autoanchor_8py_source.html  autobatch_8py.html  autobatch_8py_source.html  benchmarks_8py.html  benchmarks_8py_source.html  callbacks_8py.html  callbacks_8py_source.html  class_inverse_differential-members.html  class_inverse_differential.html  classes.html  classexport_1_1i_o_s_model-members.html  classexport_1_1i_o_s_model.html  classexport_1_1i_o_s_model__inherit__graph.dot  classify_2predict_8py.html  classify_2predict_8py_source.html  classify_2train_8py.html  classify_2train_8py_source.html  classify_2val_8py.html  classify_2val_8py_source.html  classmodels_1_1common_1_1_auto_shape-members.html  classmodels_1_1common_1_1_auto_shape.html  classmodels_1_1common_1_1_auto_shape__coll__graph.dot  classmodels_1_1common_1_1_bottleneck-members.html  classmodels_1_1common_1_1_bottleneck.html  classmodels_1_1common_1_1_bottleneck__inherit__graph.dot  classmodels_1_1common_1_1_bottleneck_c_s_p-members.html  classmodels_1_1common_1_1_bottleneck_c_s_p.html  classmodels_1_1common_1_1_bottleneck_c_s_p__inherit__graph.dot  classmodels_1_1common_1_1_c3-members.html  classmodels_1_1common_1_1_c3.html  classmodels_1_1common_1_1_c3__coll__graph.dot  (+653 more)
Doxygen/latex/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.tex  _r_e_a_d_m_e_8md.tex  _r_e_a_d_m_e_8zh-_c_n_8md.tex  activations_8py.tex  activations_8py_source.tex  annotated.tex  augmentations_8py.tex  augmentations_8py_source.tex  autoanchor_8py.tex  autoanchor_8py_source.tex  autobatch_8py.tex  autobatch_8py_source.tex  benchmarks_8py.tex  benchmarks_8py_source.tex  callbacks_8py.tex  callbacks_8py_source.tex  class_inverse_differential.tex  classexport_1_1i_o_s_model.tex  classexport_1_1i_o_s_model.tex.tmp  classexport_1_1i_o_s_model__inherit__graph.dot  classify_2predict_8py.tex  classify_2predict_8py_source.tex  (+387 more)
launch/: ur5.launch
src/: motion_planner.cpp  task_planner.cpp  ur5_motion_library.cpp  ur5_task_library.cpp  vision_node.py
srv/: ServiceMessage.srv  VisionService.srv
worlds/: project_table.world  tavolo_blocks_1.world  tavolo_blocks_2.world  tavolo_blocks_3.world  tavolo_blocks_4.world
(+258 files in other folders)
